# sverilog

./: BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  variables.bzl
combinational/: BUILD.bazel  CMakeLists.txt  Makefile  alltuples.hpp  and8.sv  comb_testbench.sv  gates.sv  genvectors.cc  minmaj.sv  muxes.sv  repro_bug.sv  sevensegment.sv  sillyfunction.sv  sillyfunction_bench.sv  xor4vectors.txt  xorfour.sv  xorfour_tb.sv
counter/: CMakeLists.txt  counter.sv  counter_bench.sv
latches/: CMakeLists.txt  latches.sv  latches_testbench.sv
muxes/: CMakeLists.txt  muxes.sv  muxes_testbench.sv
ram/: CMakeLists.txt  ram.sv  ram_testbench.sv
rmc/: CMakeLists.txt  Makefile  alwayscomb.sv  dynarr.sv  filelist_rmc  forloop.sv  randomize.sv  readmem_check.sv  sillyvectors.txt  switch.txt  top.sv
silly/: Makefile  alltuples.hpp  filelist_silly  genvectors.cc  sillyfunction_bench.sv
util/: util.sv
